Add bots, trade hooks, depth, OHLC, and web UI
- Implement live trade event hooks with timestamps in MatchingEngine
- Expose order book depth(levels) snapshot for top-of-book
- Add CandleAggregator for 1m OHLC from executed trades
- Create RandomBot and BotScheduler (priority queue) for flow
- Build FastAPI server with /api/depth, /api/trades, /api/candles
- Serve minimal polling UI at / for book, trades, and candles
- Update pyproject (fastapi, uvicorn), export Trade, add README and step5.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ name = "algorithmic-trading-sim"
 version = "0.1.0"
 description = "Core OOP backbone for an algorithmic trading simulator"
 requires-python = ">=3.9"
-dependencies = []
+dependencies = [
+    "fastapi>=0.110",
+    "uvicorn[standard]>=0.23",
+]
 
 [tool.pytest.ini_options]
 minversion = "7.0"
