--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "uvicorn[standard]>=0.23",
 ]
 
+[tool.setuptools]
+packages = { find = { include = ["trading*"], exclude = ["server*", "assets*", "tests*", "scripts*", "*.md"] } }
+
 [tool.pytest.ini_options]
 minversion = "7.0"
 addopts = "-q"
